<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context="com.bayer.turfid.SprayActivity3_Productlabel"
    android:orientation="vertical"
    android:textAlignment="center">


    <LinearLayout
        android:id="@+id/textviewLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/topTextView"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/bayer_logo"
            android:id="@+id/img_logo"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp" />

        <com.bayer.turfid.CustomTextViewBold
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:text="Spray Calculation"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_height="60dp"
            android:paddingRight="60dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignWithParentIfMissing="false"
        android:background="#7012223b"
        android:layout_below="@+id/layoutproductabel"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="-5dp">

        <com.bayer.turfid.CustomTextView
            android:layout_below="@id/layoutproductabel"
            android:lineSpacingExtra="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/productlabelnote"
            android:id="@+id/productlabeltxtview"
            android:textStyle="italic"
            android:textColor="#ffffff"
            android:paddingBottom="15dp"
            android:layout_alignParentBottom="false"
            android:paddingTop="10dp"
            android:textSize="12sp"
            android:paddingLeft="18dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutproductabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:orientation="vertical"
        android:paddingTop="@dimen/contentNoteLayoutPadding"
        android:gravity="center"
        android:foregroundGravity="center"
        android:background="@drawable/teviewcorners"
        android:layout_below="@+id/textviewLayout"
        android:layout_alignLeft="@+id/linearLayoutNote"
        android:layout_alignStart="@+id/linearLayoutNote"
        android:layout_marginRight="25dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imgclock"
            android:layout_gravity="center"
            android:src="@drawable/waterdrop" />

        <com.bayer.turfid.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/kanpsacktxt"
            android:textColor="@color/blackVal"
            android:text="@string/productlabel"
            android:paddingBottom="23dp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:paddingLeft="15dp"
            android:textAlignment="center"
            android:paddingRight="10dp"
            android:lineSpacingExtra="2sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/continueButtonLayoutHeight"
            android:background="@drawable/box"
            android:gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                android:gravity="center">

                <com.bayer.turfid.CustomEditTextBold
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/productLabelVal"
                    android:hint="L/Ha"
                    android:textColor="@color/black80"
                    android:background="#edededeb"
                    android:inputType="numberDecimal"
                    android:textSize="17sp"
                    android:textAlignment="viewStart"
                    android:imeOptions="actionDone"
                     />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <com.bayer.turfid.CustomButton
                    android:text="Continue >"
                    android:id="@+id/productLabelContinue"
                    android:background="@drawable/button_background"
                    android:textSize="@dimen/txt"
                    android:textColor="#FEFEFE"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:layout_width="120dp"
                    android:layout_height="30dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/background_floating_material_dark"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/leftarrowknapsack"
                android:src="@drawable/back_calc"
                android:layout_gravity="center" />

            <com.bayer.turfid.CustomTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/step3"
                android:id="@+id/step3"
                android:textSize="15dp"
                android:textAlignment="textEnd"
                android:gravity="center"
                android:textColor="#707070"
                android:layout_weight="0.5" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
