<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context="com.bayer.turfid.SprayActivity4_holdingspray"
    android:orientation="vertical"
    android:textAlignment="center">

    <LinearLayout
        android:id="@+id/textviewLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/topTextView"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        >
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/bayer_logo"
            android:id="@+id/img_logo"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp" />

        <com.bayer.turfid.CustomTextViewBold
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:text="Spray Calculation"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingRight="60dp"
            android:layout_height="60dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutproductabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/teviewcorners"
        android:orientation="vertical"
        android:elevation="0dp"
        android:paddingTop="10dp"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/textviewLayout"
        android:layout_alignRight="@+id/linearLayoutNote"
        android:layout_alignEnd="@+id/linearLayoutNote"
            android:layout_marginLeft="25dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/imageView3"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:src="@drawable/spray" />

        <com.bayer.turfid.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/productlabel"
            android:textColor="#464646"
            android:gravity="center"
            android:textAlignment="textStart"
            android:text="@string/holdingSpray"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:paddingBottom="8dp"
            android:paddingTop="5dp"
            android:paddingLeft="15dp"
            android:lineSpacingExtra="2sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/continueButtonLayoutHeight"
            android:background="@drawable/box"
            android:gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="15dp">

                <com.bayer.turfid.CustomEditTextBold
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:hint="Metres"
                    android:background="#EBEBEB"
                    android:textColor="@color/black80"
                    android:id="@+id/nozzleDistance"
                    android:inputType="numberDecimal"
                    android:imeOptions="actionDone"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center">

                <com.bayer.turfid.CustomButton
                    android:text="Continue >"
                    android:background="@drawable/button_background"
                    android:textSize="@dimen/txt"
                    android:textColor="#FEFEFE"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:id="@+id/holdingspraycontn"
                    android:layout_width="120dp"
                    android:layout_gravity="center"
                    android:layout_height="30dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignWithParentIfMissing="false"
            android:background="#70021e3b"
            android:layout_below="@+id/layoutproductabel"
            android:layout_marginTop="-5dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp">

            <com.bayer.turfid.CustomTextView
                android:layout_below="@id/layoutproductabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingExtra="3dp"
                android:text="@string/holdingspraynote"
                android:id="@+id/productlabeltxtview"
                android:textStyle="italic"
                android:textColor="#ffffff"
                android:paddingBottom="10dp"
                android:textAlignment="textStart"
                android:paddingLeft="15dp"
                android:layout_alignParentBottom="false"
                android:textSize="12sp"
                android:paddingTop="15dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textAllCaps="false" />

        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/background_floating_material_dark"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/leftarrowknapsack"
                android:src="@drawable/back_calc"
                android:layout_gravity="center" />

            <com.bayer.turfid.CustomTextViewBold
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/step4"
                android:id="@+id/step3"
                android:textSize="15dp"
                android:textAlignment="textEnd"
                android:gravity="center"
                android:textColor="#707070"
                android:layout_weight="0.5" />
        </LinearLayout>
    </LinearLayout>

    </RelativeLayout>
